# SRFormer-Text-Det

./: patchPyTorch.txt  pyproject.toml
