[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.run]
omit = []

[tool.poetry]
authors = ["Qingwen BU"]
classifiers = [
    "Operating System :: POSIX :: Linux",
    "Operating System :: Unix",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
]
description = "SRFormer: Text Detection Transformer with Incorporated Segmentation and Regression "
homepage = "https://github.com/retsuh-bqw/SRFormer-Text-Det"
license = ""
name = "SRFormer-Text-Det"
readme = "README.md"
repository = "https://github.com/retsuh-bqw/SRFormer-Text-Det"
version = "1.0"
package-mode = false


# See https://python-poetry.org/docs/versions/ for allowed version specification formats
[tool.poetry.dependencies]
python = "~3.12"
torch  = "*"
torchvision = "*"
torchaudio = "*"
#tensorflow = {version = "2.16.1", extras = ["and-cuda"]}
opencv-python = "*"
scipy = "*"
timm = "*"
shapely = "*"
albumentations = "*"
Polygon3 = "*"
pyclipper = "*"
setuptools = "*"
